--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -133,7 +133,9 @@ This bundled bank card will be used for withdrawal, only support the binding car
     <string name="tab_again_exit_app">Tab again exit app</string>
     <string name="more_benefit_are_waiting_for">More benefit are waiting for</string>
     <string name="got_it">I got it</string>
-
+    <string name="gold_coin_detail">Gold coin detail</string>
+    <string name="coin_count">Coins（个）</string>
+    <string name="get_coins">Get Coins</string>
 
 
 </resources>
